# investment-risk-platform

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
apps/backend/: README.md  pyproject.toml
apps/backend/src/irp_backend/: __init__.py  auth.py  config.py  deps.py  main.py
apps/backend/tests/: conftest.py  test_active_risk_endpoint.py  test_audit_endpoint.py  test_auth_config.py  test_auth_verifier.py  test_benchmark_endpoint.py  test_benchmark_relative_endpoint.py  test_benchmark_series_endpoints.py  test_check_docs_closure.py  test_covariance_endpoint.py  test_curve_endpoint.py  test_desmoothed_return_endpoint.py  test_dq_endpoint.py  test_entitlement_dependency.py  test_es_backtest_endpoint.py  test_exposure_endpoint.py  test_exposure_runs_list_endpoint.py  test_factor_endpoint.py  test_factor_exposure_endpoint.py  test_holdings_endpoint.py  test_ingest_endpoint.py  test_lifespan_guard.py  test_lineage_endpoint.py  test_marketdata_endpoint.py  test_model_endpoint.py  test_oidc_auth.py  test_pacing_endpoint.py  test_perf_endpoint.py  test_portfolio_endpoint.py  test_position_endpoint.py  test_price_endpoint.py  test_private_capital_endpoint.py  test_proxy_mapping_endpoint.py  test_proxy_weight_endpoint.py  test_reference_corporate_actions_endpoint.py  test_reference_endpoint.py  test_reference_entities_endpoint.py  test_reference_instruments_endpoint.py  test_risk_endpoint.py  test_risk_runs_list_endpoint.py  (+10 more)
apps/worker/: README.md  pyproject.toml
apps/worker/tests/: test_audit_verify.py  test_jobs.py  test_worker.py
(+393 files in other folders)
