[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irp-backend"
version = "0.1.0"
description = "Investment Risk Platform - backend API (scaffold, system endpoints only)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.9",  # multipart form parsing for POST /ingest/upload (REQ-INT-001)
  "uvicorn>=0.30",
  "pyjwt>=2.9",  # SSO-1: OIDC resource-server JWT verification (AD-007)
  "cryptography>=43",  # SSO-1: RS256 signature verification (PyJWT backend)
]

[tool.hatch.build.targets.wheel]
packages = ["src/irp_backend"]
